@@ -4,6 +4,10 @@
 * Really need to do something about all the disabled options in the
   config dialog. Some of them might make sense.
 
+2002-09-02  Adriaan de Groot
+* Added finer-grained pilot-link version checking in configure.in.in.
+  Removed all support for ancient pilot-link versions.
+
 2002-08-30  Adriaan de Groot
 * Much mucking about with dlp_ functions in an attempt to discover why
   syncing wasn't discovering _any_ of my databases. Also handling
